@@ -10,6 +10,9 @@ wallet 0.6 (unreleased)
     write the keytab to standard output rather than dying with a cryptic
     error.
 
+    Support enforcing a naming policy for wallet objects via a Perl
+    function in the wallet server configuration file.
+
     The build system now probes for GSS-API, Kerberos v5 and v4, and AFS
     libraries as necessary rather than hard-coding libraries.  Building
     on systems without strong shared library dependencies and building
